refactor: update URL instantiation to use URI conversion in DomainController for improved URL handling
Signed-off-by: Brandon Kindred <brandon.kindred@gmail.com>